# open-servo-core

./: .gitignore  CLAUDE.md  LICENSE-MIT  README.md
client/: Cargo.toml
client/examples/: cycle_soak.rs  fleet_smoke.rs  mute_probe.rs  provision.rs
client/src/: blocking.rs  client.rs  common.rs  cyclic.rs  error.rs  fake.rs  lib.rs  mgmt.rs  nusb.rs  pipe.rs  session.rs  wire.rs
client/tests/: full_stack.rs
firmware/: .gitignore  ARCHITECTURE.md  Cargo.toml  Embed.toml  open-servo-refactor-plan.md
firmware-old/open-servo-firmware-stm32f301/: Cargo.toml
firmware-old/open-servo-firmware-stm32f301/src/: adc_config.rs  board.rs  config.rs  flash.rs  isr.rs  main.rs  sinks.rs  time_driver.rs
firmware-old/open-servo-kernel/: Cargo.toml
firmware-old/open-servo-kernel/src/: kernel.rs  state.rs  test_support.rs
firmware-old/open-servo-math/: Cargo.toml
firmware-old/open-servo-math/src/: filter.rs  lib.rs  ntc.rs  ntc_gen.rs  pid.rs  thermal.rs  tick.rs
firmware-old/open-servo-registry/: Cargo.toml
firmware-old/open-servo-registry/src/: dxl.rs  facade.rs  lib.rs  policy.rs  reg.rs  spec.rs  vendor.rs  view.rs
firmware-old/open-servo-rpc/: Cargo.toml
firmware-old/open-servo-runtime-embassy/: Cargo.toml
firmware-old/open-servo-runtime-embassy/src/: embassy_runtime.rs  lib.rs  macros.rs  primitives.rs  signals.rs  tasks.rs
firmware-old/open-servo-shadow/: Cargo.toml
firmware-old/open-servo-shadow/src/: lib.rs
firmware/.cargo/: config.toml
firmware/boards/osc-adapter-wchlinke/: Cargo.toml  README.md  build.rs  memory.x
firmware/boards/osc-dev-v006/: Cargo.toml  riscv32ec_zmmul-unknown-none-elf.json  riscv32emc-unknown-none-elf.json  rust-toolchain.toml
firmware/ch32/: Cargo.toml  build.rs  osc-config.x
firmware/ch32/src/: adapters.rs  bench.rs  board.rs  cfg.rs  control.rs  convert.rs  drop_oldest_ring.rs  dxl_calibration.rs  dxl_fast.rs  dxl_handler.rs  dxl_hw_fire.rs  flash.rs  idle_anchor.rs  idle_ring.rs  irq.rs  lib.rs  log.rs  measurements.rs  prelude.rs  providers.rs  runtime.rs  services.rs  stat_led.rs  statics.rs  telemetry.rs  tune.rs  types.rs
firmware/host-ch32/: Cargo.toml
firmware/host-ch32/src/: lib.rs
firmware/lib/: Cargo.toml
firmware/lib/control-table/: Cargo.toml
firmware/lib/control-table-derive/: Cargo.toml
firmware/lib/core/: Cargo.toml
firmware/lib/drivers/: Cargo.toml
firmware/lib/dxl-protocol/: Cargo.toml
firmware/lib/host/: Cargo.toml
firmware/lib/integration/: Cargo.toml
firmware/lib/log/: Cargo.toml
firmware/lib/osc-protocol/: Cargo.toml
firmware/lib/table-export/: Cargo.toml
firmware/lib/units/: Cargo.toml
firmware/open-servo-board-stm32f301/: Cargo.toml  memory.x
firmware/open-servo-board-stm32f301/src/: adc_config.rs  calibration.rs  config.rs  flash.rs  isr.rs  lib.rs  main.rs  pwm.rs  resources.rs  sensors.rs  time_driver.rs  uart_bus.rs
firmware/open-servo-control/: Cargo.toml
firmware/open-servo-control/src/: lib.rs  pid.rs  traits.rs  units.rs
firmware/open-servo-core/: Cargo.toml
firmware/open-servo-core/.zed/: settings.json
firmware/open-servo-core/src/: accumulator.rs  app.rs  debug_shell.rs  event.rs  fault.rs  hw_trait.rs  inputs.rs  kinematics.rs  lib.rs  main.rs  outputs.rs  servo_core.rs  test_harness.rs  test_support.rs  tick.rs  timing.rs
firmware/open-servo-device/: Cargo.toml
firmware/open-servo-device/src/: comms_service.rs  device.rs  executor.rs  lib.rs  main_loop.rs  reg_ops.rs  shadow_storage.rs
firmware/open-servo-firmware-stm32f301/: Cargo.toml
firmware/open-servo-firmware-stm32f301/.cargo/: config.toml
firmware/open-servo-firmware-stm32f301/src/: flash.rs  isr.rs  main.rs  monotonic.rs  pwm.rs  resources.rs  sensors.rs  uart_bus.rs
firmware/open-servo-hw/: Cargo.toml
firmware/open-servo-hw-utils/: Cargo.toml
firmware/open-servo-hw-utils/src/: adc_dma.rs  lib.rs  rtt_async.rs  rtt_debug.rs
firmware/open-servo-hw/src/: adc_dma.rs  board.rs  capability.rs  config.rs  io.rs  lib.rs  samples.rs  traits.rs  types.rs
firmware/open-servo-kernel/: Cargo.toml
firmware/open-servo-kernel-api/: Cargo.toml
firmware/open-servo-kernel-api/src/: debug_guard.rs  faults.rs  graph.rs  host_op.rs  io.rs  kernel.rs  lib.rs  mailbox.rs  ops.rs  regs.rs  reset.rs  role.rs  samples.rs  shadow.rs  telemetry.rs  tick.rs  tick_ctx.rs  ticks.rs  timebase.rs  wired.rs
firmware/open-servo-kernel/src/: kernel.rs  lib.rs  regs.rs  shadow_fields.rs  state.rs
firmware/open-servo-log/: Cargo.toml
firmware/open-servo-log/src/: lib.rs
firmware/open-servo-macros/: Cargo.toml
firmware/open-servo-macros/src/: adc_channels.rs  facademap.rs  lib.rs  regmap.rs
firmware/open-servo-math/: Cargo.toml
firmware/open-servo-math/src/: compliance_model.rs  filter.rs  gain.rs  lib.rs  ntc.rs  ntc_gen.rs  pid.rs  thermal.rs  torque_model.rs  units.rs
firmware/open-servo-registry/: Cargo.toml
firmware/open-servo-registry/src/: dxl.rs  eeprom.rs  facade.rs  lib.rs  ram.rs  reg.rs  servo_kernel.rs  spec.rs  vendor.rs
firmware/open-servo-rpc/src/: lib.rs
firmware/open-servo-runtime/: Cargo.toml
firmware/open-servo-runtime/src/: bus.rs  executor.rs  lib.rs  main_loop.rs  runtime.rs  service_primitives.rs  services.rs  shadow_storage.rs  uart_bus.rs
firmware/open-servo-services/: Cargo.toml
firmware/open-servo-services/src/: bundle.rs  debug_shell.rs  dxl_req.rs  dxl_rx.rs  lib.rs  persist.rs  rpc.rs  rpc_transport.rs
firmware/open-servo-shadow/: Cargo.toml
firmware/open-servo-shadow/src/: lib.rs
firmware/open-servo-stm32f301/: Cargo.toml  Embed.toml  build.rs
firmware/open-servo-stm32f301/.cargo/: config.toml
firmware/open-servo-stm32f301/src/: adc_sample.rs  board.rs  calibration.rs  config.rs  debug_rtt.rs  hw_impl.rs  interrupts.rs  main.rs  mod.rs  pwm.rs  sensors.rs  system.rs
firmware/open-servo-units/src/: centic.rs  centideg.rs  deg_per_sec10.rs  (+5 more)
firmware/servo-ch32/: Cargo.toml  osc-config.x
firmware/test-uart-ch32v003/: Cargo.toml
firmware/test-uart-stm32f301/: Cargo.toml
tools/adapter-cli/: Cargo.toml
tools/bench/: Cargo.toml
(+1296 files in other folders)
