[package]
name = "open-servo-firmware-stm32f301"
version.workspace = true
edition.workspace = true

[[bin]]
name = "servo-firmware-stm32f301"
path = "src/main.rs"
test = false

[dependencies]
# Workspace dependencies
open-servo-runtime = { path = "../open-servo-runtime" }
open-servo-runtime-embassy = { path = "../open-servo-runtime-embassy", features = ["arch-cortex-m"] }
# Note: osctl feature propagates to runtime-embassy via the osctl feature below
open-servo-hw = { path = "../open-servo-hw" }
open-servo-hw-utils = { path = "../open-servo-hw-utils", features = ["async"] }
open-servo-kernel = { path = "../open-servo-kernel" }
open-servo-kernel-api = { path = "../open-servo-kernel-api" }
open-servo-macros = { path = "../open-servo-macros" }
open-servo-math = { path = "../open-servo-math" }
open-servo-services = { path = "../open-servo-services" }
open-servo-units = { path = "../open-servo-units" }

# STM32-specific
stm32f3 = { version = "0.15.1", features = ["stm32f301", "rt"] }
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = { version = "0.7.5" }

# Embassy async runtime
embassy-executor = { workspace = true, features = ["arch-cortex-m", "executor-thread"] }
embassy-sync = { workspace = true }
embassy-time = { workspace = true }
embassy-time-driver = { workspace = true }
embassy-futures = "0.1"

# Other
heapless = { workspace = true }
critical-section = { workspace = true }
static_cell = "2"

# Storage
embedded-storage = { workspace = true }
embedded-storage-async = { workspace = true }

# I/O traits
embedded-io-async = { workspace = true }

# Debug/logging
panic-rtt-target = { workspace = true }

[dependencies.defmt]
workspace = true
optional = true

[features]
default = ["current-sense-bus", "temp-sense-mcu"]
osctl = ["defmt", "open-servo-runtime-embassy/osctl", "open-servo-runtime-embassy/panic-rtt"]
current-sense-bus = []
temp-sense-mcu = []
temp-sense-motor = []
voltage-sense-motor = []
defmt = [
    "dep:defmt",
    "open-servo-runtime/defmt",
    "open-servo-runtime-embassy/defmt",
    "open-servo-hw/defmt",
    "open-servo-hw-utils/defmt",
    "open-servo-kernel/defmt",
    "open-servo-kernel-api/defmt",
    "open-servo-services/defmt",
    "open-servo-units/defmt",
    "panic-rtt-target/defmt",
]
