[package]
name = "open-servo-registry"
version.workspace = true
edition.workspace = true

[features]
default = []
defmt = ["dep:defmt", "open-servo-shadow/defmt"]

[dependencies]
open-servo-macros = { path = "../open-servo-macros" }
open-servo-shadow = { path = "../open-servo-shadow", default-features = false }
open-servo-kernel-api = { path = "../open-servo-kernel-api", default-features = false }
open-servo-units = { path = "../open-servo-units", default-features = false }
const-fnv1a-hash = "1"
heapless = { workspace = true }
critical-section = { workspace = true }
defmt = { workspace = true, optional = true }

[dev-dependencies]
critical-section = { workspace = true, features = ["std"] }
