[package]
name = "open-servo-shadow"
version.workspace = true
edition.workspace = true

[features]
default = []
defmt = ["dep:defmt", "open-servo-kernel-api/defmt"]

[dependencies]
defmt = { workspace = true, optional = true }
heapless = { workspace = true }
critical-section = { workspace = true }
open-servo-kernel-api = { path = "../open-servo-kernel-api", default-features = false }
open-servo-hw = { path = "../open-servo-hw", default-features = false }

[dev-dependencies]
critical-section = { workspace = true, features = ["std"] }
