[workspace]
resolver = "2"

[package]
name    = "osc-ch32"
version = "0.0.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
ch32-metapac     = { git = "https://github.com/ch32-rs/ch32-metapac", default-features = false, features = ["pac"] }
crc              = { version = "3", default-features = false }
dxl-protocol     = { path = "../lib/dxl-protocol", features = ["heapless"] }
embedded-storage = "0.3"
heapless         = "0.9"
osc-core         = { path = "../lib/core" }
osc-units        = { path = "../lib/units" }
portable-atomic  = { version = "1", default-features = false }
riscv            = "0.12"
critical-section = "1.2"
defmt            = { version = "1", optional = true }

# RISC-V targets lack hardware CAS; opt into the single-core assumption so
# RMW lowers to lw/sw pairs instead of pulling in critical-section. Host
# builds (clippy, unit tests) use portable-atomic's native x86 path.
[target.'cfg(target_arch = "riscv32")'.dependencies]
portable-atomic = { version = "1", default-features = false, features = ["unsafe-assume-single-core"] }

[dev-dependencies]
critical-section = { version = "1.2", features = ["std"] }

[build-dependencies]
ch32-metapac = { git = "https://github.com/ch32-rs/ch32-metapac", default-features = false, features = ["metadata"] }

[features]
default      = ["ch32v006x8x6", "dyn_cal"]
ch32v006x8x6 = ["ch32-metapac/ch32v006x8x6"]
rt           = ["ch32-metapac/rt"]
defmt        = ["dep:defmt", "osc-core/defmt"]
# Bench-only: enable hot-path instrumentation (scope marker pulses, etc.)
# in `crate::bench`. Off in production — the helpers compile to empty bodies
# so call sites stay unconditional.
bench        = []
# Snoop-driven HSI re-trim. Off → chip still observes/logs drift via
# `snoop_drift` but never writes back to DXL_CLOCK_TRIM_PENDING /
# DXL_CLOCK_FINE_TRIM_PENDING; clock_trim and clock_fine_trim_us stay
# under master-driven CAL control only.
dyn_cal      = []
