[package]
name = "open-servo-board-stm32f301"
version.workspace = true
edition.workspace = true

[[bin]]
name = "servo-board-stm32f301"
path = "src/main.rs"
test = false

[dependencies]
# Workspace dependencies
open-servo-device = { path = "../open-servo-device" }
open-servo-hw = { path = "../open-servo-hw" }
open-servo-kernel = { path = "../open-servo-kernel" }
open-servo-kernel-api = { path = "../open-servo-kernel-api" }
open-servo-units = { path = "../open-servo-units" }

# STM32-specific
stm32f3 = { version = "0.15.1", features = ["stm32f301", "rt"] }
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = { version = "0.7.5" }

# Other
heapless = { workspace = true }
critical-section = { workspace = true }

# Debug/logging
panic-rtt-target = { version = "0.2" }

[dependencies.defmt]
workspace = true
optional = true

[features]
default = ["defmt"]
current-sense-bus = []
temp-sense-mcu = []
temp-sense-motor = []
voltage-sense-motor = []
defmt = [
    "dep:defmt",
    "open-servo-device/defmt",
    "open-servo-hw/defmt",
    "open-servo-kernel/defmt",
    "open-servo-kernel-api/defmt",
    "open-servo-units/defmt",
    "panic-rtt-target/defmt",
]
