[package]
name = "open-servo-board-stm32f301"
version.workspace = true
edition.workspace = true

[[bin]]
name = "servo-board-stm32f301"
path = "src/main.rs"
test = false

[dependencies]
# Workspace dependencies
open-servo-device = { path = "../open-servo-device" }
open-servo-hw = { path = "../open-servo-hw" }
open-servo-hw-utils = { path = "../open-servo-hw-utils", features = ["async"] }
open-servo-kernel = { path = "../open-servo-kernel" }
open-servo-kernel-api = { path = "../open-servo-kernel-api" }
open-servo-macros = { path = "../open-servo-macros" }
open-servo-services = { path = "../open-servo-services", features = ["arch-cortex-m"] }
open-servo-units = { path = "../open-servo-units" }

# STM32-specific
stm32f3 = { version = "0.15.1", features = ["stm32f301", "rt"] }
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = { version = "0.7.5" }

# Embassy async runtime
embassy-executor = { workspace = true, features = ["arch-cortex-m", "executor-thread"] }
embassy-sync = { workspace = true }

# Other
heapless = { workspace = true }
critical-section = { workspace = true }
static_cell = "2"

# Debug/logging
panic-rtt-target = { workspace = true }

[dependencies.defmt]
workspace = true
optional = true

[features]
default = ["defmt", "current-sense-bus", "temp-sense-mcu"]
current-sense-bus = []
temp-sense-mcu = []
temp-sense-motor = []
voltage-sense-motor = []
defmt = [
    "dep:defmt",
    "open-servo-device/defmt",
    "open-servo-hw/defmt",
    "open-servo-hw-utils/defmt",
    "open-servo-kernel/defmt",
    "open-servo-kernel-api/defmt",
    "open-servo-services/defmt",
    "open-servo-units/defmt",
    "panic-rtt-target/defmt",
]
