[package]
name = "open-servo-control"
version.workspace = true
edition.workspace = true

[dependencies]
open-servo-math = { path = "../open-servo-math" }

[features]
default = ["pid"]
pid = []
cascade = []
velocity = []
foc = []
defmt = ["dep:defmt", "open-servo-math/defmt"]

[dependencies.defmt]
workspace = true
optional = true