[package]
name = "open-servo-core"
version.workspace = true
edition.workspace = true

[dependencies]
heapless = { workspace = true }
open-servo-control = { path = "../open-servo-control" }
open-servo-hw = { path = "../open-servo-hw" }

[features]
defmt = ["dep:defmt", "open-servo-hw/defmt", "open-servo-control/defmt"]

[dependencies.defmt]
workspace = true
optional = true