[package]
name = "open-servo-math"
version.workspace = true
edition.workspace = true
authors.workspace = true

[features]
default = []
defmt = ["dep:defmt"]
# Enable std for tests (automatically enabled by cargo test)
std = []

[dependencies]
ufmt = { workspace = true }

[dependencies.defmt]
workspace = true
optional = true

[dev-dependencies]
# Dev dependencies are only used for tests and can use std

[lib]
# Enable test harness
test = true
