[package]
name = "open-servo-runtime"
version.workspace = true
edition.workspace = true

[dependencies]
open-servo-kernel-api   = { path = "../open-servo-kernel-api", default-features = false }
open-servo-hw           = { path = "../open-servo-hw",         default-features = false }
open-servo-units        = { path = "../open-servo-units",      default-features = false }
open-servo-registry     = { path = "../open-servo-registry",   default-features = false }
embedded-storage-async  = { workspace = true }
heapless                = { workspace = true }
critical-section        = { workspace = true }
defmt                   = { workspace = true, optional = true }

[dev-dependencies]
critical-section = { workspace = true, features = ["std"] }

[features]
default = []
defmt = [
  "dep:defmt",
  "open-servo-kernel-api/defmt",
  "open-servo-hw/defmt",
  "open-servo-units/defmt",
  "open-servo-registry/defmt",
]
